Part of views added

--- a/src/main/webapp/WEB-INF/views/books/new.html
+++ b/src/main/webapp/WEB-INF/views/books/new.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../../css/inputs.css">
     <title>PL > добавить книгу</title>
 </head>
 <body>
@@ -12,23 +13,26 @@
 <form th:method="POST" th:action="@{/books}" th:object="${book}">
 
     <div class="input-area">
+        <label for="title">Название </label>
         <input type="text" th:field="*{title}" id="title" placeholder="Название книги">
         <div style="color:red" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">(error)</div>
     </div>
 
     <div class="input-area">
+        <label for="author">Автор </label>
         <input type="text" th:field="*{author}" id="author" placeholder="Имя автора">
         <div style="color:red" th:if="${#fields.hasErrors('author')}" th:errors="*{author}">(error)</div>
     </div>
 
     <div class="input-area">
-        <input type="number" th:field="*{year_of_creation}" id="year" placeholder="Год создания">
+        <label for="year">Год создания </label>
+        <input type="number" th:field="*{year_of_creation}" id="year" value="" placeholder="Год создания">
         <div style="color:red" th:if="${#fields.hasErrors('year_of_creation')}" th:errors="*{year_of_creation}">(error)</div>
     </div>
 
     <div id="bars">
         <input type="submit" value="Создать">
-        <a th:href="@{/books}">&lt Назад</a>
+        <a th:href="@{/books}">&loarr; Назад</a>
     </div>
 </form>
 
