--- a/src/main/webapp/WEB-INF/views/books/books.html
+++ b/src/main/webapp/WEB-INF/views/books/books.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>PL - список книг</title>
+    <link rel="stylesheet" href="../../css/lists.css">
 </head>
 <body>
 
@@ -17,7 +18,7 @@
 
 <a th:href="@{/books/new}" id="creation">Добавить книгу</a>
 
-<a id="back" th:href="@{/library}">&lt Назад</a>
+<a id="back" th:href="@{/library}">&loarr; Назад</a>
 
 </body>
 </html>
