--- a/src/main/webapp/WEB-INF/views/readers/new.html
+++ b/src/main/webapp/WEB-INF/views/readers/new.html
@@ -5,24 +5,27 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../../css/inputs.css">
     <title>PL > добавить читателя</title>
 </head>
 <body>
 
 <form th:method="POST" th:action="@{/readers}" th:object="${person}">
-    <div class="input-area">
+    <div class="input-area" id="name">
+        <label for="name">Имя </label>
         <input type="text" th:field="*{full_name}" id="full-name" placeholder="Иванов Иван Иванович">
         <div style="color:red" th:if="${#fields.hasErrors('full_name')}" th:errors="*{full_name}">(error)</div>
     </div>
 
     <div class="input-area">
-        <input type="number" th:field="*{year_of_birth}" id="year" placeholder="Год рождения">
+        <label for="year">Год рождения</label>
+        <input type="number" th:field="*{year_of_birth}" id="year" value="" placeholder="Год рождения">
         <div style="color:red" th:if="${#fields.hasErrors('year_of_birth')}" th:errors="*{year_of_birth}">(error)</div>
     </div>
 
     <div id="bars">
         <input type="submit" value="Создать">
-        <a th:href="@{/readers}">&lt Назад</a>
+        <a th:href="@{/readers}">&loarr; Назад</a>
     </div>
 </form>
 
