--- a/src/main/webapp/WEB-INF/views/books/showBook.html
+++ b/src/main/webapp/WEB-INF/views/books/showBook.html
@@ -5,10 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../../css/view.css">
+    <link rel="stylesheet" href="../../css/viewBook.css">
     <title>PL > страница книги</title>
 </head>
 <body>
+
+<h3 id="profile">Книга</h3>
 
 <div id="bookInfo" th:text="${book.getTitle() + ', ' + book.getAuthor() + ', ' + book.getYear_of_creation()}"></div>
 
@@ -37,7 +39,7 @@
     </form>
 
     <form th:method="DELETE" th:action="@{/books/{id}(id=${book.getBook_id()})}">
-        <input type="submit" value="Удалить книгу"/>
+        <input id="deleteBook" type="submit" value="Удалить книгу"/>
     </form>
 </div>
 
