--- a/src/main/webapp/WEB-INF/views/readers/showReader.html
+++ b/src/main/webapp/WEB-INF/views/readers/showReader.html
@@ -5,15 +5,18 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../../css/view.css">
+    <link rel="stylesheet" href="../../css/viewReader.css">
     <title>PL > страница пользователя</title>
 </head>
 <body>
+
+<h2 id="profile">Страница пользователя</h2>
 
 <div id="full_name" th:text="${reader.getFull_name()}"></div>
 
 <div id="empty_list" th:if="${isListEmpty == true}">Читатель на данный момент не имеет книг на руках</div>
 
+<label th:if="${isListEmpty == false}" for="books_list">Список книг на руках: </label>
 <div id="books_list" th:if="${isListEmpty == false}" th:each="book : ${hisBooks}">
     <div class="books">
         <a th:href="@{/books/{book_id}(book_id=${book.getBook_id()})}"
@@ -23,7 +26,7 @@
 
 <div id="bars">
     <a th:href="@{/readers/{reader_id}/edit(reader_id=${reader.getClientId()})}" id="edit">Редактировать</a>
-    <a th:href="@{/readers}">&lt Назад</a>
+    <a th:href="@{/readers}">&loarr; Назад</a>
 </div>
 
 </body>
